--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <!-- 3. Display the application -->
   <body>
     <my-app>Loading...</my-app>
+    <employee>here..</employee>
   </body>
 </html>
