NgModule, RouterModule, RouterLink updated and its working condition.

--- a/app/vehicle/vehicle-list.html
+++ b/app/vehicle/vehicle-list.html
@@ -1,5 +1,8 @@
 <ul>
-    <li *ngFor="let v of vehicles">
-        {{v.name}} | {{v.regNumber}} 
+    
+    <li *ngFor="let v of vehicles" (click)="gotoVehicle(v)">
+        {{v.name}} | {{v.regNumber}}
+        <a [routerLink]="['/vehicle', v.regNumber ]" routerLinkActive="active">{{v.name}} | {{v.regNumber}}</a>
     </li>
+    
 </ul>
